version/0.5/_sources/api/ansys/speos/core/sensor/SensorCamera.rst.txt






:class:`SensorCamera`
=====================

.. toctree::
   :hidden:

    Photometric</api/ansys/speos/core/sensor/SensorCamera.Photometric>


.. py:class:: ansys.speos.core.sensor.SensorCamera(project, name, description = '', metadata = None, sensor_instance = None, default_values = True)

   Bases: :py:obj:`BaseSensor`


   
   Sensor feature: Camera.

   By default, regarding inherent characteristics, a camera with mode photometric is chosen.
   By default, regarding properties, an axis system is selected to position the sensor,
   and no layer separation is chosen.

   :Parameters:

       **project** : :obj:`ansys.speos.core.project.Project`
           Project that will own the feature.

       **name** : :class:`python:str`
           Name of the feature.

       **description** : :class:`python:str`
           Description of the feature.
           By default, ``""``.

       **metadata** : :obj:`Optional`\[:obj:`Mapping`\[:class:`python:str`, :class:`python:str`]]
           Metadata of the feature.
           By default, ``{}``.

       **sensor_instance** : :obj:`ansys.api.speos.scene.v2.scene_pb2.Scene.SensorInstance`, :obj:`optional`
           Sensor instance to provide if the feature does not has to be created from scratch
           By default, ``None``, means that the feature is created from scratch by default.

       **default_values** : :ref:`bool <python:bltin-boolean-values>`
           Uses default values when True.
           By default, ``True``.














   ..
       !! processed by numpydoc !!


.. py:currentmodule:: SensorCamera

Overview
--------

.. tab-set::



   .. tab-item:: Methods

      .. list-table::
          :header-rows: 0
          :widths: auto

          * - :py:attr:`~set_focal_length`
            - Set the focal length.
          * - :py:attr:`~set_imager_distance`
            - Set the imager distance.
          * - :py:attr:`~set_f_number`
            - Set the f number.
          * - :py:attr:`~set_distortion_file_uri`
            - Set the distortion file.
          * - :py:attr:`~set_horz_pixel`
            - Set the horizontal pixels number corresponding to the camera resolution.
          * - :py:attr:`~set_vert_pixel`
            - Set the vertical pixels number corresponding to the camera resolution.
          * - :py:attr:`~set_width`
            - Set the width of the sensor.
          * - :py:attr:`~set_height`
            - Set the height of the sensor.
          * - :py:attr:`~set_mode_geometric`
            - Set mode geometric for the camera sensor.
          * - :py:attr:`~set_mode_photometric`
            - Set mode photometric for the camera sensor.
          * - :py:attr:`~set_axis_system`
            - Set the position of the sensor.


   .. tab-item:: Properties

      .. list-table::
          :header-rows: 0
          :widths: auto

          * - :py:attr:`~visual_data`
            - Property containing camera sensor visualization data.
          * - :py:attr:`~photometric`
            - Property containing the instance of SensorCamera.Photometric used to build the sensor.







Import detail
-------------

.. code-block:: python

    from ansys.speos.core.sensor import SensorCamera

Property detail
---------------

.. py:property:: visual_data
   :type: ansys.speos.core.generic.visualization_methods._VisualData


   
   Property containing camera sensor visualization data.





   :Returns:

       :obj:`BaseSensor.VisualData`
           Instance of VisualData Class for pyvista.PolyData of feature faces, coordinate_systems.











   ..
       !! processed by numpydoc !!

.. py:property:: photometric
   :type: Union[SensorCamera, None]


   
   Property containing the instance of SensorCamera.Photometric used to build the sensor.





   :Returns:

       :obj:`Union`\[:obj:`ansys.speos.core.sensor.SensorCamera.Photometric`, :data:`python:None`]
           Photometric class instance if it exists











   ..
       !! processed by numpydoc !!




Method detail
-------------

.. py:method:: set_focal_length(value = 5.0)

   
   Set the focal length.


   :Parameters:

       **value** : :class:`python:float`
           Distance between the center of the optical system and the focus. (mm)
           By default, ``5.0``.



   :Returns:

       :obj:`ansys.speos.core.sensor.SensorCamera`
           Camera feature











   ..
       !! processed by numpydoc !!

.. py:method:: set_imager_distance(value = 10)

   
   Set the imager distance.


   :Parameters:

       **value** : :class:`python:float`
           Imager distance (mm). The imager is located at the focal point.
           The Imager distance has no impact on the result.
           By default, ``10``.



   :Returns:

       :obj:`ansys.speos.core.sensor.SensorCamera`
           Camera feature











   ..
       !! processed by numpydoc !!

.. py:method:: set_f_number(value = 20)

   
   Set the f number.


   :Parameters:

       **value** : :class:`python:float`
           F-number represents the aperture of the front lens.
           F number has no impact on the result.
           By default, ``20``.



   :Returns:

       :obj:`ansys.speos.core.sensor.SensorCamera`
           Camera feature











   ..
       !! processed by numpydoc !!

.. py:method:: set_distortion_file_uri(uri)

   
   Set the distortion file.


   :Parameters:

       **uri** : :class:`python:str`
           Optical aberration that deforms and bends straight lines. The distortion is expressed in
           a .OPTDistortion file.



   :Returns:

       :obj:`ansys.speos.core.sensor.SensorCamera`
           Camera feature











   ..
       !! processed by numpydoc !!

.. py:method:: set_horz_pixel(value = 640)

   
   Set the horizontal pixels number corresponding to the camera resolution.


   :Parameters:

       **value** : :class:`python:int`
           The horizontal pixels number corresponding to the camera resolution.
           By default, ``640``.



   :Returns:

       :obj:`ansys.speos.core.sensor.SensorCamera`
           Camera feature











   ..
       !! processed by numpydoc !!

.. py:method:: set_vert_pixel(value = 480)

   
   Set the vertical pixels number corresponding to the camera resolution.


   :Parameters:

       **value** : :class:`python:int`
           The vertical pixels number corresponding to the camera resolution.
           By default, ``480``.



   :Returns:

       :obj:`ansys.speos.core.sensor.SensorCamera`
           Camera feature











   ..
       !! processed by numpydoc !!

.. py:method:: set_width(value = 5.0)

   
   Set the width of the sensor.


   :Parameters:

       **value** : :class:`python:float`
           Sensor's width (mm).
           By default, ``5.0``.



   :Returns:

       :obj:`ansys.speos.core.sensor.SensorCamera`
           Camera feature











   ..
       !! processed by numpydoc !!

.. py:method:: set_height(value = 5.0)

   
   Set the height of the sensor.


   :Parameters:

       **value** : :class:`python:float`
           Sensor's height (mm).
           By default, ``5.0``.



   :Returns:

       :obj:`ansys.speos.core.sensor.SensorCamera`
           Camera feature











   ..
       !! processed by numpydoc !!

.. py:method:: set_mode_geometric()

   
   Set mode geometric for the camera sensor.

   This is a simplified version of the Camera Sensor.




   :Returns:

       :obj:`ansys.speos.core.sensor.SensorCamera`
           Geometric Camera feature











   ..
       !! processed by numpydoc !!

.. py:method:: set_mode_photometric()

   
   Set mode photometric for the camera sensor.

   This allows setting every Camera Sensor parameter, including the photometric definition
   parameters.




   :Returns:

       :obj:`ansys.speos.core.sensor.SensorCamera.Photometric`
           Photometric Camera Sensor feature











   ..
       !! processed by numpydoc !!

.. py:method:: set_axis_system(axis_system = None)

   
   Set the position of the sensor.


   :Parameters:

       **axis_system** : :obj:`Optional`\[:obj:`List`\[:class:`python:float`]]
           Position of the sensor [Ox Oy Oz Xx Xy Xz Yx Yy Yz Zx Zy Zz].
           By default, ``[0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0, 1]``.



   :Returns:

       :obj:`ansys.speos.core.sensor.SensorCamera`
           Camera Sensor feature











   ..
       !! processed by numpydoc !!






Classes
-------

.. autoapisummary::

    ansys.speos.core.sensor.SensorCamera.Photometric




